tests/fixtures/fail/constructor_duplicate_field.sc
let Cell = struct { value: i32 }

let main(): i32 = {
  let cell = Cell { value: 40, value: 2 }
  cell.value
}
